fix the overlay size so it covers video game card in any viewport

--- a/client/src/sass/components/_video-game-card.scss
+++ b/client/src/sass/components/_video-game-card.scss
@@ -3,20 +3,15 @@
   position: relative;
   margin: 0 auto;
   padding: 0 $sm-spacing;
-  width: 22rem;
+  width: 18rem;
 
   @include setBreakPoints(1650) {
-    width: 25rem;
+    width: 23rem;
     height: 25rem;
   }
 
-  @include setBreakPoints(960) {
-    width: 20rem;
-    height: 20rem;
-  }
-
   @include setBreakPoints(450) {
-    width: 100%;
+    width: 43rem;
     height: 45rem;
   }
 
@@ -24,8 +19,8 @@
   &__img-unavailable {
     border-radius: 1rem;
     margin: 0 auto;
-    height: 100%;
-    width: 100%;
+    height: inherit;
+    width: inherit;
   }
 
   &__img-unavailable {
@@ -45,27 +40,26 @@
   &__overlay {
     background-color: $color-primary;
     border-radius: 1rem;
-    height: 100%;
-    width: 83%;
+    height: inherit;
+    width: inherit;
     position: absolute;
     top: 0;
-    left: 8.5%;
     opacity: 0;
 
-    @include setBreakPoints(1650) {
-      left: 7%;
-      width: 85%;
-    }
+    // @include setBreakPoints(1650) {
+    //   left: 7%;
+    //   width: 85%;
+    // }
 
-    @include setBreakPoints(960) {
-      left: 8%;
-      width: 84%;
-    }
+    // @include setBreakPoints(960) {
+    //   left: 8%;
+    //   width: 84%;
+    // }
 
-    @include setBreakPoints(450) {
-      left: 4%;
-      width: 92%;
-    }
+    // @include setBreakPoints(450) {
+    //   left: 4%;
+    //   width: 92%;
+    // }
 
     &:hover {
       opacity: 0.8;
